--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,7 +3,7 @@ on:
   push:
     branches: [ main, develop, staging ]
   pull_request:
-    branches: [ develop ]
+    branches: [ develop, staging ]
 
 jobs:
   quality:
